# pastedev-client

./: .travis.yml  README.md  requirements.txt  setup.cfg  tox.ini
pdev/: rest_client.py  runner.py
