[metadata]
name = pastedev
summary = CLI for Pastedev project
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = pastedev-team

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    pdev

[entry_points]
console_scripts =
    pdev = pdev.runner:main
